@@ -1,4 +1,5 @@
 5.1: ?/??/2016
+	* CORE: Added synchronized keyword to BaseDaoImpl.createOrUpdate() and createIfNotExists().
 	* JDBC: Fixed problem with UUID native type not using the correct persister.  Thanks Bo98. 
 
 5.0: 6/27/2016
